docs/tests/parser/functions/invalid/GenericFuncMissingCloseAngle.b
fn <T identity(T x) {
}
